--- a/EUD Editor/My Project/Resources.resx
+++ b/EUD Editor/My Project/Resources.resx
@@ -280,4 +280,7 @@
   <data name="customText" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\customText.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;ks_c_5601-1987</value>
   </data>
+  <data name="LoadFile" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\LoadFile.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
