--- a/EUD Editor/My Project/Resources.resx
+++ b/EUD Editor/My Project/Resources.resx
@@ -286,4 +286,7 @@
   <data name="MurakamiShiinaQC" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\MurakamiShiinaQC.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+  <data name="successBulid" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\successBulid.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
