--- a/EUD Editor/Form/TrigEditorForm.resx
+++ b/EUD Editor/Form/TrigEditorForm.resx
@@ -123,6 +123,72 @@
   <metadata name="ContextMenuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>133, 17</value>
   </metadata>
+  <metadata name="imageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>949, 17</value>
+  </metadata>
+  <data name="imageList1.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAD4
+        DAAAAk1TRnQBSQFMAgEBBQEAAewBAgHsAQIBEAEAARABAAT/ARkBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        AwABIAMAAQEBAAEYBgABGP8AlgABJAEcAe0BJAEcAe0BJAEcAe0BJAEcAe0BJAEcAe0BJAEcAe0BJAEc
+        Ae0BJAEcAe0BJAEcAe0BJAEcAe0BJAEcAe0BJAEcAe0BJAEcAe2ZAAEkARwB7SEAASQBHAHtmQABJAEc
+        Ae0MAAEkARwB7QEkARwB7QEkARwB7QwAASQBHAHtmQABJAEcAe0MAAEkARwB7QEkARwB7QEkARwB7QwA
+        ASQBHAHtmQABJAEcAe0hAAEkARwB7ZkAASQBHAHtDAABJAEcAe0BJAEcAe0BJAEcAe0MAAEkARwB7ZkA
+        ASQBHAHtDAABJAEcAe0BJAEcAe0BJAEcAe0MAAEkARwB7ZkAASQBHAHtDAABJAEcAe0BJAEcAe0BJAEc
+        Ae0MAAEkARwB7ZkAASQBHAHtDAABJAEcAe0BJAEcAe0BJAEcAe0MAAEkARwB7ZkAASQBHAHtDAABJAEc
+        Ae0BJAEcAe0BJAEcAe0MAAEkARwB7ZkAASQBHAHtDAABJAEcAe0BJAEcAe0BJAEcAe0MAAEkARwB7ZkA
+        ASQBHAHtIQABJAEcAe2ZAAEkARwB7QEkARwB7QEkARwB7QEkARwB7QEkARwB7QEkARwB7QEkARwB7QEk
+        ARwB7QEkARwB7QEkARwB7QEkARwB7QEkARwB7QEkARwB7f8AVwABIgEoAScBIgEoAScBIgEoAScBIgEo
+        AScBIgEoAScBIgEoAScBIgEoAScBIgEoAScBIgEoAScBIgEoAScBIgEoAScBIgEoAScBIgEoAScBIgEo
+        AScBIgEoAScBIgEoASeQAAEiASgBJwEiASgBJwEiASgBJwEiASgBJwEiASgBJwEiASgBJwEiASgBJwEi
+        ASgBJwEiASgBJwEiASgBJwEiASgBJwEiASgBJwEiASgBJwEiASgBJwEiASgBJwEiASgBJ5AAASIBKAEn
+        ASIBKAEnASIBKAEnASIBKAEnASIBKAEnASIBKAEnASIBKAEnASIBKAEnASIBKAEnASIBKAEnASIBKAEn
+        ASIBKAEnASIBKAEnASIBKAEnASIBKAEnASIBKAEnBAABgAIAAYACAAGAAgABgAIAAYACAAGAAgABgAIA
+        AYACAAGAAgABgAIAAYACAAGAAgABgAsAAYACAAGAAgABgAIAAYACAAGAAgABgAIAAYACAAGAAgABgAIA
+        AYACAAGAAgABgAIAAYALAAGAAgABgAIAAYACAAGAAgABgAIAAYACAAGAAgABgAIAAYACAAGAAgABgAIA
+        AYACAAGABwABIgEoAScBIgEoAScBIgEoAScBIgEoAScBIgEoAScBIgEoAScBIgEoAScBIgEoAScBIgEo
+        AScBIgEoAScBIgEoAScBIgEoAScBIgEoAScBIgEoAScBIgEoAScBIgEoAScEAAGAIwABgAsAAYAjAAGA
+        CwABgCMAAYAHAAEiASgBJwEiASgBJwEiASgBJwEiASgBJwEiASgBJwEiASgBJwEiASgBJwEiASgBJwEi
+        ASgBJwEiASgBJwEiASgBJwEiASgBJwEiASgBJwEiASgBJwEiASgBJwEiASgBJwQAAYAjAAGACwABgCMA
+        AYALAAGAIwABgAcAASIBKAEnASIBKAEnASIBKAEnASIBKAEnASIBKAEnASIBKAEnASIBKAEnASIBKAEn
+        ASIBKAEnASIBKAEnASIBKAEnASIBKAEnASIBKAEnASIBKAEnASIBKAEnASIBKAEnBAABgA4AAYAUAAGA
+        CwABgAgAAYACAAGAAgABgAIAAYACAAGAAgABgAIAAYAIAAGACwABgCMAAYAHAAEiASgBJwEiASgBJwEi
+        ASgBJwEiASgBJwEiASgBJwEiASgBJwEiASgBJwEiASgBJwEiASgBJwEiASgBJwEiASgBJwEiASgBJwEi
+        ASgBJwEiASgBJwEiASgBJwEiASgBJwQAAYALAAGAAgABgAIAAYARAAGACwABgAgAAYACAAGAAgABgAIA
+        AYACAAGAAgABgAIAAYAIAAGACwABgCMAAYAHAAEiASgBJwEiASgBJwEiASgBJwEiASgBJwEiASgBJwEi
+        ASgBJwEiASgBJwEiASgBJwEiASgBJwEiASgBJwEiASgBJwEiASgBJwEiASgBJwEiASgBJwEiASgBJwEi
+        ASgBJwQAAYAIAAGAAgABgAIAAYACAAGAAgABgA4AAYALAAGACAABgAIAAYACAAGAAgABgAIAAYACAAGA
+        AgABgAgAAYALAAGAIwABgAcAASIBKAEnASIBKAEnASIBKAEnASIBKAEnASIBKAEnASIBKAEnASIBKAEn
+        ASIBKAEnASIBKAEnASIBKAEnASIBKAEnASIBKAEnASIBKAEnASIBKAEnASIBKAEnASIBKAEnBAABgAgA
+        AYACAAGABQABgAIAAYACAAGACwABgAsAAYAIAAGAAgABgAIAAYACAAGAAgABgAIAAYACAAGACAABgAsA
+        AYAjAAGABwABIgEoAScBIgEoAScBIgEoAScBIgEoAScBIgEoAScBIgEoAScBIgEoAScBIgEoAScBIgEo
+        AScBIgEoAScBIgEoAScBIgEoAScBIgEoAScBIgEoAScBIgEoAScBIgEoAScEAAGACAABgAsAAYACAAGA
+        AgABgAgAAYALAAGACAABgAIAAYACAAGAAgABgAIAAYACAAGAAgABgAgAAYALAAGAIwABgAcAASIBKAEn
+        ASIBKAEnASIBKAEnASIBKAEnASIBKAEnASIBKAEnASIBKAEnASIBKAEnASIBKAEnASIBKAEnASIBKAEn
+        ASIBKAEnASIBKAEnASIBKAEnASIBKAEnASIBKAEnBAABgBcAAYACAAGACAABgAsAAYAIAAGAAgABgAIA
+        AYACAAGAAgABgAIAAYACAAGACAABgAsAAYAjAAGABwABIgEoAScBIgEoAScBIgEoAScBIgEoAScBIgEo
+        AScBIgEoAScBIgEoAScBIgEoAScBIgEoAScBIgEoAScBIgEoAScBIgEoAScBIgEoAScBIgEoAScBIgEo
+        AScBIgEoAScEAAGAGgABgAgAAYALAAGACAABgAIAAYACAAGAAgABgAIAAYACAAGAAgABgAgAAYALAAGA
+        IwABgAcAASIBKAEnASIBKAEnASIBKAEnASIBKAEnASIBKAEnASIBKAEnASIBKAEnASIBKAEnASIBKAEn
+        ASIBKAEnASIBKAEnASIBKAEnASIBKAEnASIBKAEnASIBKAEnASIBKAEnBAABgCMAAYALAAGAIwABgAsA
+        AYAjAAGABwABIgEoAScBIgEoAScBIgEoAScBIgEoAScBIgEoAScBIgEoAScBIgEoAScBIgEoAScBIgEo
+        AScBIgEoAScBIgEoAScBIgEoAScBIgEoAScBIgEoAScBIgEoAScBIgEoAScEAAGAIwABgAsAAYAjAAGA
+        CwABgCMAAYAHAAEiASgBJwEiASgBJwEiASgBJwEiASgBJwEiASgBJwEiASgBJwEiASgBJwEiASgBJwEi
+        ASgBJwEiASgBJwEiASgBJwEiASgBJwEiASgBJwEiASgBJwEiASgBJwEiASgBJwQAAYACAAGAAgABgAIA
+        AYACAAGAAgABgAIAAYACAAGAAgABgAIAAYACAAGAAgABgAIAAYALAAGAAgABgAIAAYACAAGAAgABgAIA
+        AYACAAGAAgABgAIAAYACAAGAAgABgAIAAYACAAGACwABgAIAAYACAAGAAgABgAIAAYACAAGAAgABgAIA
+        AYACAAGAAgABgAIAAYACAAGAAgABgAcAASIBKAEnASIBKAEnASIBKAEnASIBKAEnASIBKAEnASIBKAEn
+        ASIBKAEnASIBKAEnASIBKAEnASIBKAEnASIBKAEnASIBKAEnASIBKAEnASIBKAEnASIBKAEnASIBKAEn
+        kAABQgFNAT4HAAE+AwABKAMAAUADAAEgAwABAQEAAQEGAAEBFgAD/wEAAv8GAAL/BgABgAEDBgABvwH7
+        BgABvAF7BgABvAF7BgABvwH7BgABvAF7BgABvAF7BgABvAF7BgABvAF7BgABvAF7BgABvAF7BgABvwH7
+        BgABgAEDBgAC/wgABv8CAAb/AgABgAEDAYABAwGAAQMCAAG/AfsBvwH7Ab8B+wIAAb8B+wG/AfsBvwH7
+        AgABvQH7AbABGwG/AfsCAAG4AfsBsAEbAb8B+wIAAbABewGwARsBvwH7AgABsgE7AbABGwG/AfsCAAG3
+        ARsBsAEbAb8B+wIAAb8BmwGwARsBvwH7AgABvwHbAbABGwG/AfsCAAG/AfsBvwH7Ab8B+wIAAb8B+wG/
+        AfsBvwH7AgABgAEDAYABAwGAAQMCAAb/Cw==
+</value>
+  </data>
   <data name="FastColoredTextBox1.ServiceColors" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdGYXN0Q29sb3JlZFRleHRCb3gsIFZlcnNpb249Mi4xNi4yMS4w
