--- a/EUD Editor/My Project/Resources.resx
+++ b/EUD Editor/My Project/Resources.resx
@@ -127,6 +127,9 @@
   <data name="Cancle" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Cancle.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ICON_SCDB" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ICON_SCDB.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="SKill" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\SKill.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -142,8 +145,8 @@
   <data name="ICON_TriggerEditor" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ICON_TriggerEditor.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Save" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Save.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="modifi" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\modifi.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="customText" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\customText.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;ks_c_5601-1987</value>
@@ -151,17 +154,11 @@
   <data name="FromInternel" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\FromInternel.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="modifi" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\modifi.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="punitloop" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\punitloop.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;ks_c_5601-1987</value>
+  <data name="Insert" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Insert.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="NUpgrade" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\NUpgrade.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Insert" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Insert.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Create" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Create.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -169,14 +166,17 @@
   <data name="Copy" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Copy.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="ICON_TileSet" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\ICON_TileSet.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="punitloop" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\punitloop.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;ks_c_5601-1987</value>
   </data>
   <data name="UnitOrder" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\UnitOrder.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="LoadFile" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\LoadFile.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="successBulid" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\successBulid.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="Setting" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Setting.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -211,6 +211,9 @@
   <data name="NewFile" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\New.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="MurakamiShiinaQC" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\MurakamiShiinaQC.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
   <data name="ICON_MPQEditor" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ICON_MPQEditor.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -222,6 +225,9 @@
   </data>
   <data name="ICON_GRP" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ICON_GRP.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="MostRecentlyRedo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\MostRecentlyRedo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Tech" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Tech.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -241,8 +247,8 @@
   <data name="MostRecentlyUsed" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\MostRecentlyUsed.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="ICON_BinEditor" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\ICON_BinEditor.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Save" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Save.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="ICON_BtnSet" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ICON_BtnSet.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -253,8 +259,8 @@
   <data name="Down" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Down.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="제목_없음_2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\제목 없음-2.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="ICON_BinEditor" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ICON_BinEditor.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Colortable" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Colortable.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -280,13 +286,13 @@
   <data name="DatEditLoading" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\DatEditLoading.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="ICON_SCDB" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\ICON_SCDB.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="ICON_TileSet" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ICON_TileSet.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="MurakamiShiinaQC" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\MurakamiShiinaQC.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  <data name="제목_없음_2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\제목 없음-2.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="successBulid" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\successBulid.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="StringAnimater" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\StringAnimater.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
